fix: spacing xl

--- a/packages/components/src/components/telekom/telekom-footer/telekom-footer.css
+++ b/packages/components/src/components/telekom/telekom-footer/telekom-footer.css
@@ -117,3 +117,10 @@
     font: var(--font-large);
   }
 }
+
+@media screen and (--xl) {
+  .scale-telekom-footer :where(ul),
+  .scale-telekom-footer[type='minimal'] :where(ul) {
+    --_nav-items-spacing: var(--telekom-spacing-unit-x12);
+  }
+}
